--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
             <artifactId>jcommon</artifactId>
             <version>1.0.24</version>
         </dependency>
+        <!-- https://mavenlibs.com/maven/pom/com.calendarfx/calendar -->
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>view</artifactId>
+            <version>11.12.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.calendarfx/calendar -->
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>calendar</artifactId>
+            <version>11.12.5</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
